Add directory and note custom properties.

--- a/style.css
+++ b/style.css
@@ -1,17 +1,6 @@
-# Front-end Style Guide
-
-## Layout
-
-The designs were created to the following widths:
-
-- Mobile: 375px
-- Desktop: 1440px
-
-## Colors
-
-### Primary
-
-- Very Dark Blue: hsl(243, 87%, 12%)
+:root {
+    ### Primary
+    - Very Dark Blue: hsl(243, 87%, 12%)
 - Desaturated Blue: hsl(238, 22%, 44%)
 
 ### Accent
@@ -23,8 +12,15 @@ The designs were created to the following widths:
 
 - Light Grayish Blue: hsl(240, 75%, 98%)
 - Light Gray: hsl(0, 0%, 75%)
+}
 
-## Typography
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+
 
 ### Headings, Call-to-actions, Header Navigation
 
