--- a/style.css
+++ b/style.css
@@ -55,3 +55,69 @@ p {
   font-size: var(--fs-medium);
   font-weight: var(--fw-regular);
 }
+
+/* nav */
+nav {
+  display: flex;
+  justify-content: space-between;
+  padding: 1em 1em 1em 1em;
+  align-items: center;
+}
+
+nav img {
+  width: 80px;
+  height: auto;
+}
+
+nav ul {
+  display: flex;
+}
+
+nav li {
+  list-style-type: none;
+  color: var(--clr-primary-100);
+  font-family: var(--ff-primary-100);
+  font-size: var(--fs-x-small);
+  font-weight: var(--fw-bold);
+}
+
+nav li:not(:last-child) {
+  padding-right: 2em;
+}
+
+/* main */
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0 1em 0 1em;
+}
+
+main img {
+  margin-top: 4.5em;
+  width: 304px;
+  height: auto;
+}
+
+main h1 {
+  margin-top: 2em;
+  text-align: center;
+}
+
+main p {
+  margin-top: 1.5em;
+  text-align: center;
+}
+
+main button {
+  background-color: var(--clr-accent-100);
+  color: var(--clr-neutral-100);
+  width: calc(375px - 2em);
+  height: 35px;
+  font-family: var(--ff-primary-100);
+  font-size: var(--fs-x-medium);
+  font-weight: var(--fw-regular);
+  border: none;
+  border-radius: 3px;
+  margin-top: 1.5em;
+}
