Add 2 sections and ul+li to footer.

--- a/style.css
+++ b/style.css
@@ -99,12 +99,14 @@ main img {
   height: auto;
 }
 
-main h1 {
+main h1,
+section h2 {
   margin-top: 2em;
   text-align: center;
 }
 
-main p {
+main p,
+section p {
   margin-top: 1.5em;
   text-align: center;
 }
@@ -120,4 +122,27 @@ main button {
   border: none;
   border-radius: 3px;
   margin-top: 1.5em;
+}
+
+/* seperator */
+.seperator {
+  margin-top: 5.5em;
+  display: block;
+}
+
+/* section */
+section {
+  background-color: var(--clr-neutral-100);
+}
+
+section.productive {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.productive img {
+  margin-top: 1.5em;
+  width: 304px;
+  height: auto;
 }
