--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ p {
   font-family: var(--ff-primary-200);
   font-size: var(--fs-medium);
   font-weight: var(--fw-regular);
+  max-inline-size: 60ch;
 }
 
 /* nav */
@@ -136,6 +137,7 @@ main button,
 /* seperator */
 .seperator {
   margin-top: 5.5em;
+  min-width: 100%;
   display: block;
 }
 
@@ -148,6 +150,7 @@ section.productive {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 0 1em 0 1em;
 }
 
 .productive img {
@@ -158,13 +161,22 @@ section.productive {
 
 .productive > h2 {
   margin-top: 5.5em;
+  width: 100%;
+  text-align: left;
+}
+
+.productive > p {
+  text-align: left;
 }
 
 .productive__card {
-  width: 300px;
   background-color: white;
   padding: 1em;
   margin-top: 2.5em;
+  margin-bottom: 4.5em;
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px 3px rgb(235, 235, 235);
+  width: calc(375px - 2em);
 }
 
 .productive__card h3,
@@ -186,6 +198,13 @@ section.productive {
 
 .productive__card-container {
   display: flex;
+  padding-top: 1em;
+  align-items: center;
+}
+
+.productive__card-wrapper {
+  display: flex;
+  flex-direction: column;
 }
 
 .productive__card-wrapper p {
@@ -203,11 +222,6 @@ section.productive {
   margin-right: 0.5em;
 }
 
-.productive__card-wrapper {
-  display: flex;
-  flex-direction: column;
-}
-
 /* section - earlyacess */
 section.earlyaccess {
   background-color: var(--clr-primary-200);
@@ -222,6 +236,7 @@ section.earlyaccess {
 .earlyaccess h2,
 .earlyaccess p {
   color: var(--clr-neutral-100);
+  text-align: left;
 }
 
 .earlyaccess button {
@@ -235,4 +250,25 @@ footer {
   font-family: var(--ff-primary-200);
   font-size: var(--fs-medium);
   font-weight: var(--fw-regular);
+  padding: 3em 1em 0em 1em;
+}
+
+footer ul {
+  padding-bottom: 1em;
+}
+
+footer ul li {
+  list-style-type: none;
+  padding-bottom: 1em;
+}
+
+.footer__logo {
+  height: 30px;
+  width: auto;
+  margin-bottom: 1em;
+}
+
+.social__icons-wrapper {
+  display: flex;
+  justify-content: center;
 }
