--- a/style.css
+++ b/style.css
@@ -131,7 +131,14 @@ main button,
   font-weight: var(--fw-regular);
   border: none;
   border-radius: 3px;
-  margin-top: 1.5em;
+  margin-top: 1em;
+}
+
+input {
+  width: calc(375px - 2em);
+  height: 40px;
+  padding-left: 1em;
+  margin-top: 2em;
 }
 
 /* seperator */
@@ -262,13 +269,45 @@ footer ul li {
   padding-bottom: 1em;
 }
 
+footer a {
+  text-decoration: none;
+  color: var(--clr-neutral-100);
+}
+
 .footer__logo {
   height: 30px;
   width: auto;
-  margin-bottom: 1em;
+  margin-bottom: 2em;
+}
+
+.footer__contact-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-bottom: 1em;
+}
+
+.footer__contact-container {
+  display: flex;
+  align-items: center;
+  padding-bottom: 1em;
+}
+
+.footer__contact-container img {
+  padding-right: 0.5em;
 }
 
 .social__icons-wrapper {
   display: flex;
   justify-content: center;
+  padding-bottom: 1em;
+}
+
+.social__icons-wrapper span {
+  border: 1px solid white;
+  border-radius: 50%;
+}
+
+.fa-stack {
+  margin: 0 0.5em 0 0.5em;
 }
