--- a/style.css
+++ b/style.css
@@ -25,6 +25,11 @@
 /* Custom Properties > 50em */
 @media (min-width: 50em) {
   :root {
+    --fs-x-small: 0.75rem;
+    --fs-small: 0.875rem;
+    --fs-medium: 1rem;
+    --fs-large: 2.5rem;
+    --fs-x-large: 2.5rem;
   }
 }
 
@@ -66,6 +71,11 @@ p {
 }
 
 /* nav */
+header {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
 nav {
   display: flex;
   justify-content: space-between;
@@ -100,12 +110,14 @@ main {
   flex-direction: column;
   align-items: center;
   padding: 0 1em 0 1em;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 main img {
   margin-top: 4.5em;
   width: 100%;
-  max-width: 500px;
+  max-width: 640px;
   height: auto;
 }
 
@@ -143,9 +155,14 @@ input {
 }
 
 @media (min-width: 50em) {
+  nav img {
+    width: 166px;
+  }
+
   .grid-col-2 {
     display: grid;
     grid-template-columns: 50% 50%;
+    place-items: center;
   }
 
   picture {
@@ -153,7 +170,7 @@ input {
   }
 
   main h1 {
-    margin-top: 2em;
+    margin-top: 0em;
     text-align: left;
   }
 
@@ -164,9 +181,30 @@ input {
 
   main img {
     margin-top: 1em;
-    width: 100%;
-    max-width: 500px;
-    height: auto;
+  }
+
+  main {
+    margin-top: 2em;
+  }
+}
+
+@media (min-width: 70em) {
+  .grid-col-2-btns {
+    display: flex;
+    margin-top: 1.5em;
+  }
+
+  main button {
+    width: 200px;
+    height: 45px;
+    margin-top: 0;
+    margin-left: 1em;
+  }
+
+  input {
+    width: 320px;
+    height: 45px;
+    margin-top: 0;
   }
 }
 
