--- a/style.css
+++ b/style.css
@@ -400,3 +400,38 @@ footer a {
 .fa-stack {
   margin: 0 0.5em 0 0.5em;
 }
+
+.fa:hover {
+  color: var(--clr-accent-100);
+}
+
+.social__icons-wrapper span:hover {
+  border: 1px solid var(--clr-accent-100);
+  border-radius: 50%;
+}
+
+footer a:hover {
+  color: var(--clr-accent-100);
+}
+
+@media (min-width: 60em) {
+  .logo__gutter {
+    max-width: 1440px;
+    margin: 0 auto;
+  }
+
+  .grid-col-4 {
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+    max-width: 1440px;
+    margin: 0 auto;
+  }
+
+  .footer-grid-col {
+    place-content: center;
+  }
+
+  footer ul {
+    padding-left: 33%;
+  }
+}
