--- a/style.css
+++ b/style.css
@@ -70,6 +70,10 @@ p {
   max-inline-size: 60ch;
 }
 
+button {
+  cursor: pointer;
+}
+
 /* nav */
 header {
   max-width: 1440px;
@@ -229,7 +233,8 @@ section.productive {
 
 .productive img {
   margin-top: 1.5em;
-  width: 304px;
+  width: 100%;
+  max-width: 640px;
   height: auto;
 }
 
@@ -316,6 +321,29 @@ section.productive {
   border-bottom: 1px solid var(--clr-accent-200);
   padding-bottom: 2px;
   margin-top: 2em;
+}
+
+@media (min-width: 50em) {
+  .col-2-prod {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    max-width: 1440px;
+    margin: 0 auto;
+  }
+
+  .prod-col-2 {
+    order: -1;
+  }
+
+  section h2 {
+    margin-top: 2em;
+    text-align: left;
+  }
+
+  section p {
+    margin-top: 1.5em;
+    text-align: left;
+  }
 }
 
 /* section - earlyacess */
